--- a/views/user_add.hbs
+++ b/views/user_add.hbs
@@ -52,6 +52,15 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <div class="col-md-3 col-md-offset-3">
+      <label for="approver_inp" class="_col-md-2 control-label">
+        <input class="" id="approver_inp" name="approver" type="checkbox" />
+        Is approver
+      </label>
+    </div>
+  </div>
+
 
   <div class="form-group">
     <label for="start_date_inp" class="col-md-3 control-label">Started on</label>
