--- a/views/user_edit.hbs
+++ b/views/user_edit.hbs
@@ -62,6 +62,15 @@
   </div>
 
   <div class="form-group">
+    <div class="col-md-3 col-md-offset-3">
+      <label for="approver_inp" class="_col-md-2 control-label">
+        <input class="" id="approver_inp" name="approver" type="checkbox" {{# if employee.approver}} checked="checked"  {{/if}} >
+        Is approver
+      </label>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label for="start_date_inp" class="col-md-3 control-label">Started on</label>
     <div class="col-md-3 date">
       <input class="form-control" id="start_date_inp" type="text" name="start_date" required data-date-autoclose="1" data-provide="datepicker" data-date-format="{{#with logged_user.company }}{{this.get_default_date_format_for_date_picker}}{{/with}}" data-date-week-start="1" value="{{as_date employee.start_date}}" aria-describedby="start_date_help">
